<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:orderInCategory="98"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_team"
        android:orderInCategory="97"
        android:title="@string/action_change"
        android:visible="false"
        />
</menu>
