<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlFavoriteHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/favorite.header_height"
            android:background="@color/colorPrimaryDark"
            android:gravity="center">
            <ImageView
                android:id="@+id/ivTeamLogo"
                android:layout_width="@dimen/favorite.logo_size"
                android:layout_height="@dimen/favorite.logo_size"
                android:src="@drawable/img_loading"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:id="@+id/llInfoHeader"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivTeamLogo"
                android:paddingLeft="@dimen/favorite.header_padding"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/tvFullnameHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="@dimen/favorite.text_size_large"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/tvNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/favorite.text_size_normal"
                    android:textStyle="italic"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/rlFavoriteHeader"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/favorite.body_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/favorite.text_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_fullname"
                    android:textSize="@dimen/favorite.text_size_normal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvFullNameBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/favorite.text_padding"
                    android:text="@string/loading"
                    android:textSize="@dimen/favorite.text_size_normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/favorite.text_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_shortname"
                    android:textSize="@dimen/favorite.text_size_normal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvShortname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/favorite.text_padding"
                    android:text="@string/loading"
                    android:textSize="@dimen/favorite.text_size_normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/favorite.text_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_code"
                    android:textSize="@dimen/favorite.text_size_normal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/favorite.text_padding"
                    android:text="@string/loading"
                    android:textSize="@dimen/favorite.text_size_normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/favorite.text_padding"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_stadium"
                        android:textSize="@dimen/favorite.text_size_normal"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvStadium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/favorite.text_padding"
                        android:text="@string/loading"
                        android:textSize="@dimen/favorite.text_size_normal"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_capacity"
                        android:textSize="@dimen/favorite.text_size_normal"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/favorite.text_padding"
                        android:text="@string/loading"
                        android:textSize="@dimen/favorite.text_size_normal"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/favorite.text_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_manager"
                    android:textSize="@dimen/favorite.text_size_normal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/favorite.text_padding"
                    android:text="@string/loading"
                    android:textSize="@dimen/favorite.text_size_normal"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>